Made a huge amount of progress on the Cosora Theme in the Control Panel, it's almost ready for deployment. Added the view counter, it currently collects data without exposing it to the admin.
Added an API for scheduling tasks which run once every second and once every fifteen minutes.
Added a generated map containing all the routes with the function names as keys.
Added the request counter to the generated router.
Added more ARIA Labels and moved various bits and pieces into the CSS files for flexibility.
Removed a bunch of redundant avatar checks in the templates.
Improved the mobile friendliness of Cosora.
Fixed various issues in the other themes.
Refactored the file listener.
Gosora now resyncs newly created theme files not just modified ones.
Gosora now resyncs renamed theme files not just modified ones.

--- a/templates/ip-search.html
+++ b/templates/ip-search.html
@@ -14,7 +14,7 @@
 	</div>
 	{{if .IP}}
 	<div class="rowblock bgavatars">
-		{{range .ItemList}}<div class="rowitem"{{if .Avatar}} style="background-image: url('{{.Avatar}}');"{{end}}>
+		{{range .ItemList}}<div class="rowitem" style="background-image: url('{{.Avatar}}');">
 			<a href="{{.Link}}">{{.Name}}</a>
 		</div>
 		{{else}}<div class="rowitem">No users found.</div>{{end}}
