--- a/templates/panel-forum-edit.html
+++ b/templates/panel-forum-edit.html
@@ -49,7 +49,7 @@ var form_vars = {'perm_preset': ['can_moderate','can_post','read_only','no_acces
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><a>Forum Permissions</a></div>
 	</div>
-	<div id="forum_quick_perms" class="colstack_item rowlist">
+	<div id="forum_quick_perms" class="colstack_item rowlist formlist">
 		{{range .Groups}}
 		<div class="formrow">
 			<div class="formitem editable_parent">
