--- a/templates/panel-modlogs.html
+++ b/templates/panel-modlogs.html
@@ -22,7 +22,7 @@
 				<span>{{.Action}}</span><br />
 				<small style="margin-left: 2px;font-size: 12px;">{{.IPAddress}}</small>
 			</span>
-			<span style="float: right;">
+			<span class="to_right">
 				<span style="font-size: 14px;">{{.DoneAt}}</span>
 			</span>
 			<div style="clear: both;"></div>
