--- a/templates/forum.html
+++ b/templates/forum.html
@@ -15,7 +15,7 @@
 			<div class="opt create_topic_opt" title="Create Topic" aria-label="Create a topic"><a class="create_topic_link" href="/topics/create/{{.Forum.ID}}"></a></div>
 			{{/** TODO: Add a permissions check for this **/}}
 			<div class="opt mod_opt" title="Moderate">
-				<a class="moderate_link" href="#"></a>
+				<a class="moderate_link" href="#" aria-label="Moderate Posts"></a>
 			</div>
 			{{else}}<div class="opt locked_opt" title="You don't have the permissions needed to create a topic" aria-label="You don't have the permissions needed to make a topic in this forum"><a></a></div>{{end}}
 			<div style="clear: both;"></div>
@@ -39,7 +39,7 @@
 	{{if .CurrentUser.Perms.CreateTopic}}
 	<div id="forum_topic_create_form" class="rowblock topic_create_form quick_create_form" style="display: none;" aria-label="Quick Topic Form">
 		<form id="topic_create_form_form" enctype="multipart/form-data" action="/topic/create/submit/" method="post"></form>
-		{{if .CurrentUser.Avatar}}<img class="little_row_avatar" src="{{.CurrentUser.Avatar}}" height="64" />{{end}}
+		<img class="little_row_avatar" src="{{.CurrentUser.Avatar}}" height="64" />
 		<input form="topic_create_form_form" id="topic_board_input" name="topic-board" value="{{.Forum.ID}}" type="hidden">
 		<div class="main_form">
 			<div class="topic_meta">
@@ -72,7 +72,7 @@
 		{{range .ItemList}}<div class="topic_row" data-tid="{{.ID}}">
 		<div class="rowitem topic_left passive datarow {{if .Sticky}}topic_sticky{{else if .IsClosed}}topic_closed{{end}}">
 			<span class="selector"></span>
-			{{if .Creator.Avatar}}<a href="{{.Creator.Link}}"><img src="{{.Creator.Avatar}}" height="64" /></a>{{end}}
+			<a href="{{.Creator.Link}}"><img src="{{.Creator.Avatar}}" height="64" /></a>
 			<span class="topic_inner_left">
 				<a class="rowtopic" href="{{.Link}}"><span>{{.Title}}</span></a>
 				<br /><a class="rowsmall starter" href="{{.Creator.Link}}">{{.Creator.Name}}</a>
@@ -86,7 +86,7 @@
 			</span>
 		</div>
 		<div class="rowitem topic_right passive datarow {{if .Sticky}}topic_sticky{{else if .IsClosed}}topic_closed{{end}}">
-			{{if .LastUser.Avatar}}<a href="{{.LastUser.Link}}"><img src="{{.LastUser.Avatar}}" height="64" /></a>{{end}}
+			<a href="{{.LastUser.Link}}"><img src="{{.LastUser.Avatar}}" height="64" /></a>
 			<span>
 				<a href="{{.LastUser.Link}}" class="lastName" style="font-size: 14px;">{{.LastUser.Name}}</a><br>
 				<span class="rowsmall lastReplyAt">{{.RelativeLastReplyAt}}</span>
