--- a/templates/guilds_member_list.html
+++ b/templates/guilds_member_list.html
@@ -19,7 +19,7 @@
 	<div style="clear: both;"></div>
 </div>
 <main id="socialgroups_member_list" class="rowblock member_list" style="position: relative;z-index: 50;">
-	{{range .ItemList}}<div class="rowitem passive datarow" style="{{if .User.Avatar}}background-image: url({{.User.Avatar}});background-position: left;background-repeat: no-repeat;background-size: 64px;padding-left: 78px;{{end}}{{if .Offline}}background-color: #eaeaea;{{else if gt .Rank 0}}background-color: #e6f3ff;{{end}}">
+	{{range .ItemList}}<div class="rowitem passive datarow" style="background-image: url({{.User.Avatar}});background-position: left;background-repeat: no-repeat;background-size: 64px;padding-left: 78px;{{if .Offline}}background-color: #eaeaea;{{else if gt .Rank 0}}background-color: #e6f3ff;{{end}}">
 		<span style="float: right;">
 			<span class="rank" style="font-size: 15px;">{{.RankString}}</span><br />
 			<span class="joinedAt rowsmall">{{.JoinedAt}}</span>
