--- a/templates/panel-adminlogs.html
+++ b/templates/panel-adminlogs.html
@@ -16,15 +16,28 @@
 	</div>
 	<div id="panel_adminlogs" class="colstack_item rowlist">
 		{{range .Logs}}
-		<div class="rowitem" style="font-weight: normal;text-transform: none;">
-			<a style="font-size: 17px;">{{.Action}}</a><br />
-			<small style="margin-left: 2px;">IP: {{.IPAddress}}</small>
-			<span style="float: right;">
-				<span style="font-size: 16px;position:relative;top: -2px;">{{.DoneAt}}</span>
+		<div class="rowitem panel_compactrow" style="font-weight: normal;text-transform: none;">
+			<span style="float: left;">
+				<span>{{.Action}}</span><br />
+				<small style="margin-left: 2px;font-size: 12px;">{{.IPAddress}}</small>
 			</span>
+			<span class="to_right">
+				<span style="font-size: 14px;">{{.DoneAt}}</span>
+			</span>
+			<div style="clear: both;"></div>
 		</div>
 		{{end}}
 	</div>
+	{{if gt .LastPage 1}}
+	<div class="pageset">
+		{{if gt .Page 1}}<div class="pageitem"><a href="?page={{subtract .Page 1}}">Prev</a></div>{{end}}
+		{{range .PageList}}
+		<div class="pageitem"><a href="?page={{.}}">{{.}}</a></div>
+		{{end}}
+		{{if ne .LastPage .Page}}<div class="pageitem"><a href="?page={{add .Page 1}}">Next</a></div>{{end}}
+	</div>
+	{{end}}
 </main>
+
 </div>
 {{template "footer.html" . }}
