--- a/templates/panel-debug.html
+++ b/templates/panel-debug.html
@@ -6,13 +6,13 @@
 		<div class="rowitem"><a>Debug</a></div>
 	</div>
 	<div id="panel_debug" class="colstack_grid">
-		<div class="grid_item grid_stat">Uptime</div>
-		<div class="grid_item grid_stat">Open DB Conns</div>
-		<div class="grid_item grid_stat">Adapter</div>
+		<div class="grid_item grid_stat"><span>Uptime</span></div>
+		<div class="grid_item grid_stat"><span>Open DB Conns</span></div>
+		<div class="grid_item grid_stat"><span>Adapter</span></div>
 
-		<div class="grid_item grid_stat">{{.Uptime}}</div>
-		<div class="grid_item grid_stat">{{.OpenConns}}</div>
-		<div class="grid_item grid_stat">{{.DBAdapter}}</div>
+		<div class="grid_item grid_stat"><span>{{.Uptime}}</span></div>
+		<div class="grid_item grid_stat"><span>{{.OpenConns}}</span></div>
+		<div class="grid_item grid_stat"><span>{{.DBAdapter}}</span></div>
 	</div>
 </main>
 </div>
