--- a/templates/panel-settings.html
+++ b/templates/panel-settings.html
@@ -10,7 +10,7 @@
 		{{range $key, $value := .Something}}
 		<div class="rowitem panel_compactrow editable_parent">
 			<a href="/panel/settings/edit/{{$key}}" class="editable_block panel_upshift">{{$key}}</a>
-			<a class="panel_compacttext" style="float: right;">{{$value}}</a>
+			<a class="panel_compacttext to_right">{{$value}}</a>
 		</div>
 		{{end}}
 	</div>
