--- a/templates/panel-word-filters.html
+++ b/templates/panel-word-filters.html
@@ -10,12 +10,12 @@
 		{{range .Something}}
 		<div class="rowitem panel_compactrow editable_parent">
 			<a data-field="find" data-type="text" href="/panel/settings/word-filters/edit/{{.ID}}" class="editable_block panel_upshift edit_fields">{{.Find}}</a>
-			<span style="padding-left: 2px;padding-right: 2px;"> || </span>
+			<span class="itemSeparator"></span>
 			<a data-field="replacement" data-type="text" class="editable_block panel_compacttext">{{.Replacement}}</a>
 			<span class="panel_buttons">
-				<a class="panel_tag edit_fields hide_on_edit panel_right_button">Edit</a>
+				<a class="panel_tag edit_fields hide_on_edit panel_right_button edit_button" aria-label="Edit Word Filter"></a>
 				<a class="panel_right_button" href="/panel/settings/word-filters/edit/submit/{{.ID}}"><button class='panel_tag submit_edit show_on_edit' type='submit'>Update</button></a>
-				<a href="/panel/settings/word-filters/delete/submit/{{.ID}}?session={{$.CurrentUser.Session}}" class="panel_tag panel_right_button hide_on_edit">Delete</a>
+				<a href="/panel/settings/word-filters/delete/submit/{{.ID}}?session={{$.CurrentUser.Session}}" class="panel_tag panel_right_button hide_on_edit delete_button" aria-label="Delete Word Filter"></a>
 			</span>
 		</div>
 		{{else}}
