--- a/themes/tempra-conflux/public/main.css
+++ b/themes/tempra-conflux/public/main.css
@@ -19,9 +19,7 @@ body {
 }
 
 /* Patch for Edge, until they fix emojis in arial x.x */
-@supports (-ms-ime-align:auto) {
-	.user_content { font-family: Segoe UI Emoji, arial; }
-}
+@supports (-ms-ime-align:auto) { .user_content { font-family: Segoe UI Emoji, arial; } }
 
 ul {
 	padding-left: 0px;
@@ -47,7 +45,6 @@ li:hover {
 }
 li a {
 	text-decoration: none;
-	/*color: #515151;*/
 	color: black;
 	font-size: 17px;
 }
@@ -64,6 +61,31 @@ li a {
 	padding-right: 10px;
 }
 
+#menu_forums a:after {
+	content: "Forums";
+}
+.menu_topics a:after {
+	content: "Topics";
+}
+.menu_account a:after {
+	content: "Account";
+}
+.menu_profile a:after {
+	content: "Profile";
+}
+.menu_panel a:after {
+	content: "Panel";
+}
+.menu_logout a:after {
+	content: "Logout";
+}
+.menu_login a:after {
+	content: "Login";
+}
+.menu_register a:after {
+	content: "Register";
+}
+
 .alert_bell:before {
 	content: '🔔︎';
 }
@@ -71,7 +93,6 @@ li a {
 	cursor: default;
 }
 .menu_alerts {
-	/*padding-left: 7px;*/
 	font-size: 20px;
 	padding-top: 2px;
 	color: rgb(80,80,80);
@@ -457,6 +478,13 @@ li a {
 	padding: 10px;
 }
 
+.to_right {
+	margin-left: auto;
+	float: right;
+}
+.little_row_avatar {
+	display: none;
+}
 .topic_create_form .topic_button_row .formitem {
 	display: flex;
 }
@@ -572,10 +600,6 @@ button.username {
 	position: relative;
 	top: -0.25px;
 }
-
-/* We'll be rewriting the profiles soon too! */
-/*.username.real_username { color: #404040; font-size: 16px; padding-right: 4px; }
-.username.real_username:hover { color: black; }*/
 
 .postQuote {
 	border: rgb(200,200,210);
@@ -881,6 +905,10 @@ button.username {
 }
 #poweredBy span {
 	font-size: 12px;
+}
+#poweredByName {
+	color: black;
+	text-decoration: none;
 }
 
 .pageset {
