--- a/themes/tempra-simple/public/media.partial.css
+++ b/themes/tempra-simple/public/media.partial.css
@@ -67,6 +67,18 @@
 	.grid_istat { margin-bottom: 0px; }
 }
 
+@media(max-width: 550px) {
+	#poweredByDash, #poweredByMaker {
+		display: none;
+	}
+}
+
+@media (max-width: 500px) {
+	.topic_list .topic_row {
+		grid-template-columns: calc(100% - 194px) 194px;
+	}
+}
+
 @media (max-width: 470px) {
 	.menu_overview, .menu_profile { display: none; }
 	.selectedAlert .alertList {
@@ -143,6 +155,15 @@
 		font-size: 14px;
 	}
 	.container { width: 100% !important; }
+}
+
+@media(max-width: 390px) {
+	.topic_list .topic_row {
+		display: block;
+	}
+	.topic_row .topic_right {
+		display: none;
+	}
 }
 
 @media (max-width: 330px) {
